# EspoCRM-MCP-Auth0

./: .env.example  .env.fga.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  schema.fga  setup.py
scripts/: demo_init.py  fga_init.py
src/: __init__.py  config.py  server.py  tools.py
src/auth0/: __init__.py  authz.py  errors.py  fga.py  middleware.py  oauth.py
src/espocrm/: __init__.py  client.py  types.py
src/tools/: __init__.py  accounts.py  base.py  calls.py  cases.py  contacts.py  fga_config.py  generic.py  health.py  leads.py  meetings.py  notes.py  opportunities.py  relationships.py  tasks.py  teams.py  users.py
tests/: conftest.py  test_accounts.py  test_authz.py  test_base.py  test_config.py  test_contacts.py  test_fga_config.py  test_generic.py  test_leads.py  test_tools.py  test_types.py
